(executable
  (name SketchJsoo)
  (flags :standard -safe-string)
  (js_of_ocaml 
   (flags :standard --no-cmis --toplevel --linkall +toplevel.js +dynlink.js)
  )
  (preprocess (pps js_of_ocaml-ppx))
  (link_flags -linkall -no-check-prims)
  (libraries 
    js_of_ocaml 
    js_of_ocaml-toplevel
    sketch.utop
    sketch.util
  )
)
