(library
   (name WorkerTest)
   (public_name playground-test.lib)
   (flags :standard -w -33 -safe-string -rectypes)
   ; the linkall flag ensures that all of our tests are compiled and the
   ; -g flag emits debugging information
   (ocamlopt_flags -linkall -g)
   ; you will want to depend on the library you are testing as well, however for
   ; the purposes of this example we are only depending on the test runner itself
   (libraries rely.lib playground.worker)
   (modules (:standard \ RunTests))
)

(executable
  ; the for the library is automatically detected because of the name, but we
  ; need to explicitly specify the package here
  (package playground-test)
  (name RunTests)
  (modes byte)
  (link_flags (:standard -linkall))
  (flags :standard -w -33 -safe-string -rectypes -custom)
  (public_name RunTests.exe)
  (libraries
    playground-test.lib
    playground.worker
    rely.lib
  )
  (modules RunTests)
)
